force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/ucinn_ascendv2__Contact_Report__c.object-meta.xml
<CustomObject>
    <description>Report detailing any significant interactions with the constituent.</description>
    <label>Contact Report</label>
    <nameField>
        <label>Contact Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>