force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Add_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Add_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you select this option, do not add the spouse as an additional constituent when creating the contact report</inlineHelpText>
    <label>Add spouse to contact (only if present)</label>
    <type>Checkbox</type>
</CustomField>