force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link case to the contact report.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contact Reports</relationshipLabel>
    <relationshipName>Contact_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>