force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Case_Preferred_Time_frame__c.field-meta.xml
<CustomField>
    <fullName>Case_Preferred_Time_frame__c</fullName>
    <label>Case Preferred Time-frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate (1-3 days)</fullName>
            </value>
            <value>
                <fullName>Normal (8-10 days)</fullName>
                <default>true</default>
                <label>Normal (8-10 days)</label>
            </value>
            <value>
                <fullName>Long Term (by the next 4 weeks)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>