force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Constituent_FF__c.field-meta.xml
<CustomField>
    <fullName>Constituent_FF__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Full_Name_Formula__c</formula>
    <label>Related Constituent</label>
    <type>Text</type>
</CustomField>