force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Description_Truncated__c.field-meta.xml
<CustomField>
    <fullName>Description_Truncated__c</fullName>
    <label>Description (Truncated)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>