force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Discovery_Significant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Significant_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if contact report is the first significant contact in the last 10 years or ever</description>
    <inlineHelpText>Checked if contact report is the first significant contact in the last 10 years or ever</inlineHelpText>
    <label>Discovery Significant Contact</label>
    <type>Checkbox</type>
</CustomField>