force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <description>Used for ISUF</description>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>