force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Fundraiser_is_User_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_is_User_Logged_In__c</fullName>
    <formula>IF(  OwnerId = $User.Id, TRUE, FALSE)</formula>
    <label>Fundraiser is User Logged In</label>
    <type>Checkbox</type>
</CustomField>