force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ISU_Representatives__c.field-meta.xml
<CustomField>
    <fullName>ISU_Representatives__c</fullName>
    <label>ISU Representatives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>