force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/New_Bio_Demo_Information__c.field-meta.xml
<CustomField>
    <fullName>New_Bio_Demo_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box will uncheck upon the record saving, but a message will be sent to Information Management to notify them of the bio demo information update.</inlineHelpText>
    <label>New Bio Demo Information</label>
    <type>Checkbox</type>
</CustomField>