force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Number_of_Contact_Manager__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contact_Manager__c</fullName>
    <label>Number of Contact Manager</label>
    <summaryForeignKey>ucinn_ascendv2__Fundraiser_Contact_Report_Relation__c.ucinn_ascendv2__Contact_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>