force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Number_of_Primary_Constituents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Primary_Constituents__c</fullName>
    <label>Number of Primary Constituents</label>
    <summaryFilterItems>
        <field>ucinn_ascendv2__Contact_Report_Relation__c.ucinn_ascendv2__Contact_Role__c</field>
        <operation>equals</operation>
        <value>Primary Constituent</value>
    </summaryFilterItems>
    <summaryForeignKey>ucinn_ascendv2__Contact_Report_Relation__c.ucinn_ascendv2__Contact_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>