force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Old_ISU_Representative__c.field-meta.xml
<CustomField>
    <fullName>Old_ISU_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old ISU Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Reports (ISU Representative)</relationshipLabel>
    <relationshipName>Contact_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>