force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Organization_Contact_Report__c.field-meta.xml
<CustomField>
    <fullName>Organization_Contact_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be checked (by a flow) if the constituent field is blank. used for campus engage permission to access contact reports they create for individuals</description>
    <label>Organization Contact Report</label>
    <type>Checkbox</type>
</CustomField>