force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent organization. Populated by program. Not a user-facing field.</description>
    <label>Parent Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Reports (Parent Organization)</relationshipLabel>
    <relationshipName>Contact_Reports_P</relationshipName>
    <type>Lookup</type>
</CustomField>