force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Primary_Organization__c.field-meta.xml
<CustomField>
    <fullName>Primary_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Reports (Primary Organization)</relationshipLabel>
    <relationshipName>Contact_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>