force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Discovery</fullName>
            </value>
            <value>
                <fullName>2-Cultivation</fullName>
            </value>
            <value>
                <fullName>3-Solicitation</fullName>
            </value>
            <value>
                <fullName>4-Stewardship</fullName>
            </value>
            <value>
                <fullName>Cultivate</fullName>
                <isActive>false</isActive>
                <label>Cultivate</label>
            </value>
            <value>
                <fullName>Document</fullName>
                <isActive>false</isActive>
                <label>Document</label>
            </value>
            <value>
                <fullName>Negotiate</fullName>
                <isActive>false</isActive>
                <label>Negotiate</label>
            </value>
            <value>
                <fullName>Not Fundraising Related</fullName>
                <isActive>false</isActive>
                <label>Not Fundraising Related</label>
            </value>
            <value>
                <fullName>Qualify</fullName>
                <isActive>false</isActive>
                <label>Qualify</label>
            </value>
            <value>
                <fullName>Solicitation</fullName>
                <isActive>false</isActive>
                <label>Solicitation</label>
            </value>
            <value>
                <fullName>Steward</fullName>
                <isActive>false</isActive>
                <label>Steward</label>
            </value>
            <value>
                <fullName>Stewardship</fullName>
                <isActive>false</isActive>
                <label>Stewardship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>