force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>&quot;TIP: To add organizations and additional constituents using a lookup, click save below and add them on the next screen in the Additional Constituents card.&quot;</defaultValue>
    <description>TIP: To add organizations and additional constituents using a lookup, click save below and add them on the next screen in the Additional Constituents card.</description>
    <label>Reminder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>