force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the contact report</description>
    <inlineHelpText>Title of the contact report</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>