force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/Two_Way_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Two_Way_Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate that the prospect was responsive.</inlineHelpText>
    <label>Two-Way Exchange</label>
    <type>Checkbox</type>
</CustomField>