force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Approval_Incomplete_Comments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Approval_Incomplete_Comments__c</fullName>
    <label>Approval / Incomplete Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>