force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Contact_Report_Body__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Report_Body__c</fullName>
    <inlineHelpText>Description of the contact.</inlineHelpText>
    <label>Contact Report Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>