force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Contact_Report_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Report_Name_Auto_Number__c</fullName>
    <displayFormat>CR-{0000000}</displayFormat>
    <label>Contact Report Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>