force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>