force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Date_Time__c</fullName>
    <label>Date/Time (DEPRECATED)</label>
    <type>Time</type>
</CustomField>