force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Description__c</fullName>
    <inlineHelpText>A brief description of the interaction that includes key people, places &amp; topics for quick future reference.</inlineHelpText>
    <label>Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>