force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Fundraiser_is_User_Logged_In_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_is_User_Logged_In_Formula__c</fullName>
    <description>Notes that the User Logged in is a Fundraiser 1, 2, 3, 4, or 5 - used for Reports</description>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundraiser is User Logged In</label>
    <type>Checkbox</type>
</CustomField>