force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Fundraiser_Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_Unit__c</fullName>
    <defaultValue>$User.Department</defaultValue>
    <label>Fundraiser Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>