force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Is_Confidential_Parent_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Confidential_Parent_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Is_Confidential__c ||  ucinn_ascendv2__Account__r.ucinn_ascendv2__Is_Confidential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Confidential Parent</label>
    <type>Checkbox</type>
</CustomField>