force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Is_Substantive_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Substantive_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate that the contact moved the relationship forward through qualification, solicitation, or the closing of a gift.</inlineHelpText>
    <label>Is Substantive Contact</label>
    <type>Checkbox</type>
</CustomField>