force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Is_Visit_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Visit_Formula__c</fullName>
    <formula>ISPICKVAL( ucinn_ascendv2__Contact_Method__c  ,&quot;Visit&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Visit</label>
    <type>Checkbox</type>
</CustomField>