force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Outcome__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Disqualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>