force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Proposal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contact Reports</relationshipLabel>
    <relationshipName>Contact_Reports_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>