force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/fields/ucinn_ascendv2__Responsible_Persons__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Responsible_Persons__c</fullName>
    <label>Responsible Persons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>