force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/validationRules/Date_Cannot_Be_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Cannot_Be_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>ucinn_ascendv2__Date__c &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Contact Report dates cannot be in the future.</errorMessage>
</ValidationRule>