force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/validationRules/Must_Include_Constituent_Or_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Include_Constituent_Or_Org</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( ucinn_ascendv2__Contact__c ), ISBLANK (  ucinn_ascendv2__Account__c ))</errorConditionFormula>
    <errorMessage>You must enter a constituent or organization on a contact report.</errorMessage>
</ValidationRule>