force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/validationRules/No_Edit_for_Non_Owner_Campus_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_for_Non_Owner_Campus_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$Profile.Name  = &quot;ISUF-Campus Pro&quot;, 
$User.Id &lt;&gt;  OwnerId
 
)</errorConditionFormula>
    <errorMessage>Only Owners of Contact Reports can edit the contact report.</errorMessage>
</ValidationRule>