force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/validationRules/Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(ucinn_ascendv2__Contact_Method__c, &quot;&quot;), ISNULL( ucinn_ascendv2__Date__c ), ISBLANK( Purpose__c ), ISNULL(  ucinn_ascendv2__Description__c ))</errorConditionFormula>
    <errorMessage>Contact Method cannot be blank.</errorMessage>
</ValidationRule>