force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/validationRules/ucinn_ascendv2__Status_Development_Officer.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Status_Development_Officer</fullName>
    <active>true</active>
    <description>Development officer cannot specify any status beyond submitted or resubmitted.</description>
    <errorConditionFormula>AND(
$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c  &lt;&gt; TRUE ,
$Profile.Name = &quot;Development Officer&quot; &amp;&amp; (TEXT(ucinn_ascendv2__Status__c)
=&quot;Approved&quot; ||TEXT(ucinn_ascendv2__Status__c)
=&quot;Incomplete&quot;||TEXT(ucinn_ascendv2__Status__c)=&quot;Inactive&quot;
))</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Status__c</errorDisplayField>
    <errorMessage>Only the RMATS team can select a status of approved, incomplete, or inactive.</errorMessage>
</ValidationRule>