force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>ucinn_ascendv2__Date__c</columns>
    <columns>ucinn_ascendv2__Contact_Method__c</columns>
    <columns>Contact_Managers__c</columns>
    <columns>ISU_Representatives__c</columns>
    <columns>ucinn_ascendv2__Description__c</columns>
    <columns>ucinn_ascendv2__Contact_Report_Body__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>NAME</columns>
    <columns>Two_Way_Exchange__c</columns>
    <columns>ucinn_ascendv2__Is_Substantive_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Date__c</field>
        <operation>equals</operation>
        <value>9/29/2023</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>laumer</value>
    </filters>
    <label>All</label>
</ListView>