force-app/main/default/objects/ucinn_ascendv2__Contact_Report__c/listViews/ucinn_ascendv2__Contact_Submitted_Resubmitted.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Contact_Submitted_Resubmitted</fullName>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>ucinn_ascendv2__Approval_Incomplete_Comments__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Description__c</columns>
    <columns>ucinn_ascendv2__Contact_Method__c</columns>
    <columns>ucinn_ascendv2__Contact_Report_Body__c</columns>
    <columns>ucinn_ascendv2__Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Resubmitted</value>
    </filters>
    <label>Contact Submitted or Resubmitted</label>
</ListView>